@@ -4,6 +4,8 @@ trunk (unreleased)
 * blkback: measure ring utilisation; segments per request; total
   requests and responses (ok and error)
 * blkback: support indirect descriptors (i.e. large block sizes)
+* blkfront: if the 'connect' string is at all ambiguous, fail rather
+  than risk using the wrong disk
 
 1.1.0 (30-Jan-2014):
 * blkback: functorise over Activations.
